--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.3",
     "nanoid": "^5.0.4",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
