--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
